3단계 - 사다리(게임 실행) (#2384)
* 리뷰 반영 - 생성자에 불필요한 로직 제거, 변수명 수정 및 테스트 추가

* 상수 추출

* 리뷰 반영 - 가독성 개선

* 기능 구현 목록 작성

* [리팩토링] Ladder 변수명 수정

* [리팩토링] Line 클래스 수정 및 LineFactory 생성

* [리팩토링] Ladder 클래스 개선

* [리팩토링] LineFactory 클래스 개선

* 기능 구현 목록 추가

* 사다리의 이동방향을 나타내는 클래스를 추가한다.

* 사다리 실행 결과를 출력하는 기능을 구현한다.

* [리팩토링] StringUtil 범용성 있는 메서드로 네이밍 변경

* 실행 결과를 입력 받고 출력한다.

* 기능 구현 목록 수정

* 기능 구현 목록 추가

* 사다리 실행을 위한 클래스를 추가한다.

* [리팩토링] 클래스 이름 변경

* 사다리 실행 결과를 출력한다.

* 기능 구현 목록 추가

* main 메서드를 구현한다.

* UserResult 테스트 케이스 추가

* format 수정

* 상수 추출

* Output 공백 추가

---------

Co-authored-by: jayden(김준기) <jayden.i@kakaocorp.com>